Support enablePreview for JavaCompile