@@ -99,6 +99,7 @@ public abstract class CompileOptions extends AbstractOptions {
     private final Property<String> javaModuleVersion;
     private final Property<String> javaModuleMainClass;
     private final Property<Integer> release;
+    private final Property<Boolean> enablePreview;
 
     private final DirectoryProperty generatedSourceOutputDirectory;
 
@@ -111,6 +112,7 @@ public abstract class CompileOptions extends AbstractOptions {
         this.generatedSourceOutputDirectory = objectFactory.directoryProperty();
         this.headerOutputDirectory = objectFactory.directoryProperty();
         this.release = objectFactory.property(Integer.class);
+        this.enablePreview = objectFactory.property(Boolean.class);
         this.incrementalAfterFailure = objectFactory.property(Boolean.class);
         this.forkOptions = objectFactory.newInstance(ForkOptions.class);
         this.debugOptions = new DebugOptions();
@@ -507,6 +509,17 @@ public abstract class CompileOptions extends AbstractOptions {
         return release;
     }
 
+    /**
+     * Configures whether Preview Features should be enabled for the compilation ({@code --enable-preview} compiler flag).
+     *
+     * @since 8.9
+     */
+    @Incubating
+    @Input
+    @Optional
+    public Property<Boolean> getEnablePreview() {
+        return enablePreview;
+    }
 
     /**
      * Set the version of the Java module.
